fix zoom anchor point offset when mobile address bar is visible

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 
 #bm-worldmap {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
 }
 
 
